[gd_scene load_steps=6 format=3 uid="uid://pkgkjtdr5wp8"]

[ext_resource type="AudioStream" uid="uid://cfm3uo1nwkbp8" path="res://Scenes/test song.tres" id="1_y6hbb"]
[ext_resource type="Script" path="res://Scenes/MusicPlayer.gd" id="2_arwax"]
[ext_resource type="AudioStream" uid="uid://dy642r16vxvrt" path="res://Music/GOING_FOR_GOLD_INTRO.wav" id="3_lx64q"]
[ext_resource type="AudioStream" uid="uid://c2txdctlhq4y8" path="res://Music/GOING_FOR_GOLD_LOOP.wav" id="4_hds5r"]
[ext_resource type="AudioStream" uid="uid://decm015vslyeq" path="res://Music/GOOD_AS_GOLD.wav" id="5_ne8hp"]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" groups=["music"]]
stream = ExtResource("1_y6hbb")
script = ExtResource("2_arwax")

[node name="Node2D" type="Node2D" parent="."]

[node name="LEVEL1" type="AudioStreamPlayer" parent="Node2D" groups=["music"]]
stream = ExtResource("3_lx64q")

[node name="LEVEL1-1" type="AudioStreamPlayer" parent="Node2D" groups=["music"]]
stream = ExtResource("4_hds5r")

[node name="LEVEL2" type="AudioStreamPlayer" parent="Node2D" groups=["music"]]
stream = ExtResource("5_ne8hp")

[connection signal="finished" from="Node2D/LEVEL1" to="." method="_on_level_1_intro_finished"]
[connection signal="finished" from="Node2D/LEVEL1-1" to="." method="_on_level_1_loop_finished"]
[connection signal="finished" from="Node2D/LEVEL2" to="." method="_on_level_2_finished"]
